--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs -d  src/database/data-source.ts",
-    "migrations:generate": "npm run typeorm -- migration:generate -n",
+    "typeorm": "typeorm-ts-node-commonjs -d  ./src/database/data-source.ts",
+    "migrations:generate": "npm run typeorm -- migration:generate",
     "migrations:run": "npm run typeorm -- migration:run",
     "migrations:show": "npm run typeorm -- migration:show",
     "migrations:drop": "npm run typeorm -- schema:drop"
@@ -37,6 +37,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "11.0.0",
+    "@nestjs/swagger": "11.2.0",
+    "class-validator": "0.14.2",
     "joi": "17.13.3",
     "mysql2": "^3.14.1",
     "pg": "^8.15.6",
